--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -40,12 +40,17 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 15px;
+    gap: 10px;
   }
 }
 
 .FilesListViewer-action {
   text-decoration: none;
+  display: flex;
+  width: 20px;
+  height: 20px;
+  align-items: center;
+  justify-content: center;
 
   &:hover,
   &:active {
