--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -40,8 +40,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 75%;
-  background-color: lighten(@edu-primary-color-light, 10%);
+  opacity: 85%;
+  border: 1px solid @edu-primary-color-light;
+  border-radius: @edu-border-radius-base;
+  background-color: @edu-selection-background-color;
 
   &.is-visible {
     display: block
