EDU-564 Show media preview in chapter editor

--- a/src/components/media-player-track.less
+++ b/src/components/media-player-track.less
@@ -6,6 +6,11 @@
     height: 0;
     overflow: hidden;
   }
+
+  &.MediaPlayerTrack--previewMode {
+    width: 50%;
+    margin: 0 auto;
+  }
 }
 
 .MediaPlayerTrack-aspectRatioContainer {
