--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -14,10 +14,6 @@
   position: relative;
 }
 
-.InteractiveMediaEditor-timeline {
-  margin-top: 30px;
-}
-
 .InteractiveMediaEditor-chapterSelector {
   display: flex;
   margin: 0 auto;
@@ -93,7 +89,7 @@
   display: flex;
   justify-content: center;
   color: @edu-text-color;
-  padding-top: @edu-content-padding;
+  padding: @edu-content-padding 0;
 }
 
 .InteractiveMediaEditor-readonlyValue {
