EDU-571 Replace files icons

--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -31,6 +31,9 @@
 
 .FilesGridViewer-fileIcon {
   font-size: 60px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5px;
 }
 
 .FilesGridViewer-fileOverlay {
