--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -17,8 +17,10 @@
   }
 }
 
-.FilesListViewer-fileIcon {
-  padding-right: 5px;
+.FilesListViewer-fileName {
+  gap: 5px;
+  display: flex;
+  align-items: center;
 }
 
 .FilesListViewer-row {
