EDU-568 Show real image instead of icon

--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -29,11 +29,18 @@
   }
 }
 
-.FilesGridViewer-fileIcon {
+.FilesGridViewer-fileDisplay {
+  height: 60px;
   font-size: 60px;
   display: flex;
-  justify-content: center;
   margin-bottom: 5px;
+  align-items: center;
+  justify-content: center;
+}
+
+.FilesGridViewer-fileDisplayImage {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .FilesGridViewer-fileOverlay {
