EDU-563 Keep image tile link style as set globally (do not overwrite)

--- a/src/plugins/image-tiles/image-tiles.less
+++ b/src/plugins/image-tiles/image-tiles.less
@@ -1,6 +1,6 @@
-.ImageTiles {}
+.ImageTilesDisplay {}
 
-.ImageTiles-grid {
+.ImageTilesDisplay-grid {
   display: grid;
   align-items: start;
   gap: 20px;
@@ -8,19 +8,19 @@
   margin-right: auto;
 }
 
-.ImageTiles-tile {
+.ImageTilesDisplay-tile {
   text-align: center;
   overflow-x: hidden;
 
-  &.ImageTiles-tile--noLink {
+  &.ImageTilesDisplay-tile--noLink {
     cursor: not-allowed;
   }
 }
 
-.ImageTiles-img {
+.ImageTilesDisplay-img {
   max-width: 100%;
 }
 
-.ImageTiles-description {
-  color: @edu-text-color;
+.ImageTilesDisplay-description {
+  color: inherit;
 }
