--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -88,6 +88,7 @@
 @import '../components/pdf-document.less';
 @import '../components/mini-pager.less';
 @import '../components/file-preview.less';
+@import '../components/media-player-progress-bar.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
