--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -472,9 +472,9 @@
 // // Tooltip max width
 // @tooltip-max-width: 250px;
 // // Tooltip text color
-// @tooltip-color: #fff;
+@tooltip-color: @edu-tooltip-text-color;
 // // Tooltip background color
-// @tooltip-bg: rgba(0, 0, 0, 0.75);
+@tooltip-bg: @edu-tooltip-background-color;
 // // Tooltip arrow width
 // @tooltip-arrow-width: 5px;
 // // Tooltip distance with trigger
