--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -47,6 +47,8 @@
 @edu-border-color-base: #BCBCBC;
 @edu-border-color-light: #E8E8E8;
 @edu-green-icon-color: @green-8;
+@edu-tooltip-text-color: @edu-white;
+@edu-tooltip-background-color: rgba(62, 82, 118, 0.75);
 
 @edu-apply-color: @green-4;
 @edu-success-color: @green-7;
