EDU-579 Support seek dragging

--- a/src/components/media-player-progress-bar.less
+++ b/src/components/media-player-progress-bar.less
@@ -43,6 +43,14 @@
   background-color: lighten(@edu-primary-color-light, 25%);
 }
 
+.MediaPlayerProgressBar-interractionOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: @edu-progress-bar-hover-height;
+}
+
 .MediaPlayerProgressBar-progressTooltip {
   position: absolute;
   display: flex;
