EDU-579 Flatten media player components hierarchy

--- a/src/components/media-player-controls.less
+++ b/src/components/media-player-controls.less
@@ -1,10 +1,9 @@
 .MediaPlayerControls {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 
-  &.MediaPlayerControls--standalone {
-    padding: 15px;
-    background-color: @edu-background-color-light;
-    border-radius: @edu-border-radius-base;
-
+  &.MediaPlayerControls--audioOnly {
     .ant-slider .ant-slider-rail {
       .ant-slider-rail {
         background-color: darken(@edu-background-color-base, 5%);
@@ -17,12 +16,6 @@
       }
     }
   }
-}
-
-.MediaPlayerControls-controls {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .MediaPlayerControls-controlsGroup {
