--- a/src/components/media-player-progress-bar.less
+++ b/src/components/media-player-progress-bar.less
@@ -8,8 +8,8 @@
 .MediaPlayerProgressBar {
   position: relative;
   width: 100%;
+  margin: 15px 0 25px 0;
   height: @edu-progress-bar-height;
-  margin-top: @edu-content-padding;
   padding: @edu-progress-bar-vertical-padding 0;
 
   &.is-enabled {
