EDU-553 Adjust overlay background color

--- a/src/components/files-viewer.less
+++ b/src/components/files-viewer.less
@@ -13,5 +13,5 @@
   display: grid;
   align-content: center;
   justify-content: center;
-  background-color: fade(@edu-white, 50%);
+  background-color: fade(@edu-background-color-light, 60%);
 }
