EDU-575 Add playback speed options

--- a/src/components/media-player-controls.less
+++ b/src/components/media-player-controls.less
@@ -18,6 +18,10 @@
   }
 }
 
+.MediaPlayerControls-downloadItem {
+  margin-right: 8px;
+}
+
 .MediaPlayerControls-controlsGroup {
   display: flex;
   flex-wrap: wrap;
