EDU-575 Add support to change playback rate

--- a/src/components/media-player-controls.less
+++ b/src/components/media-player-controls.less
@@ -22,6 +22,21 @@
   margin-right: 8px;
 }
 
+.MediaPlayerControls-playbackRate {
+  font-size: 12px;
+}
+
+.MediaPlayerControls-playbackRateItem {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.MediaPlayerControls-playbackRateItemSelection {
+  width: 10px;
+  font-size: 12px;
+}
+
 .MediaPlayerControls-controlsGroup {
   display: flex;
   flex-wrap: wrap;
