--- a/src/components/markdown-textarea.less
+++ b/src/components/markdown-textarea.less
@@ -14,4 +14,10 @@
   padding: 4px 11px;
   border: 1px solid @edu-border-color-base;
   border-radius: @edu-border-radius-base;
+
+  &.is-disabled {
+    cursor: not-allowed;
+    color: @edu-disabled-color;
+    border-color: @edu-border-color-light;
+  }
 }
