--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -99,6 +99,26 @@
   padding-left: 10px;
 }
 
+.InteractiveMediaEditor-answer {
+  display: flex;
+  align-items: center;
+  margin-bottom: @edu-content-padding;
+}
+
+.InteractiveMediaEditor-answerCheckmark {
+  color: @edu-disabled-color;
+
+  &:hover,
+  &:active,
+  &:disabled {
+    color: @edu-disabled-color;
+  }
+
+  &.is-active {
+    color: @edu-green-icon-color;
+  }
+}
+
 .InteractiveMediaDisplay-overlay {
   position: absolute;
   top: -@interactive-media-display-overlay-overflow;
