--- a/src/components/media-player-progress-bar.less
+++ b/src/components/media-player-progress-bar.less
@@ -81,7 +81,7 @@
   top: @edu-progress-bar-vertical-padding;
   height: @edu-progress-bar-height;
   border-right: 1px dotted @edu-white;
-  border-left: 1px dotted @edu-border-color-base;
+  border-left: 1px dotted @edu-border-color-dark;
 }
 
 .MediaPlayerProgressBar-markTimecode {
