--- a/src/components/table.less
+++ b/src/components/table.less
@@ -38,7 +38,7 @@
       }
 
       tbody tr td {
-        border-color: @edu-border-color-base;
+        border-color: @edu-border-color-dark;
       }
     }
   }
@@ -51,12 +51,13 @@
     margin-top: 2.5em;
   }
 
-  .ant-pagination-prev, .ant-pagination-next {
+  .ant-pagination-prev,
+  .ant-pagination-next {
     .m-pagination-item();
 
     color: @edu-text-color;
     background-color: transparent;
-    border: 1px solid @edu-border-color-base;
+    border: 1px solid @edu-border-color-dark;
     border-radius: @edu-border-radius-base;
 
     &:hover:not(.ant-pagination-disabled) {
