--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -84,7 +84,7 @@
 .InteractiveMediaEditor-separator {
   margin: 0 -@edu-content-padding;
   padding-top: 20px;
-  border: 1px dotted @edu-border-color-base;
+  border: 1px dotted @edu-border-color-dark;
   border-style: none none dotted;
 }
 
