--- a/src/styles/panel.less
+++ b/src/styles/panel.less
@@ -1,5 +1,5 @@
 @panel-proposed-background-color: @blue-1;
-@panel-border-color: @edu-border-color-base;
+@panel-border-color: @edu-border-color-dark;
 @panel-proposed-border-color: @edu-primary-color-light;
 @panel-content-overlay-background-color: fade(@edu-white, 50%);
 
