--- a/src/components/metadata-title.less
+++ b/src/components/metadata-title.less
@@ -3,7 +3,7 @@
   align-items: baseline;
   margin: 0 0 0.5em 0;
   padding: 0 0 0.25em 0;
-  border-bottom: 1px solid @edu-border-color-base;
+  border-bottom: 1px solid @edu-border-color-dark;
 }
 
 .MetadataTitle-text {
