--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -12,15 +12,15 @@
   &.is-editable {
     padding: @edu-content-padding;
     padding-top: @section-display-editable-padding-top;
-    border-color: @edu-border-color-base;
+    border-color: @edu-border-color-dark;
     min-height: @section-display-min-height + @section-display-editable-padding-top;
 
     &:hover {
-      border: 1px solid @edu-border-color-base;
+      border: 1px solid @edu-border-color-dark;
     }
 
     &.is-dragged {
-      border: 1px solid @edu-border-color-base;
+      border: 1px solid @edu-border-color-dark;
     }
 
     &.is-other-section-dragged {
@@ -30,7 +30,7 @@
 
   &.is-hard-deletable {
     &:hover {
-      border: 1px solid @edu-border-color-base;
+      border: 1px solid @edu-border-color-dark;
     }
 
     &:hover .SectionDisplay-actionButton--hardDelete {
@@ -108,7 +108,7 @@
   grid-auto-flow: column;
   padding: 0 5px;
   height: @edu-control-height-sm;
-  border: 1px solid @edu-border-color-base;
+  border: 1px solid @edu-border-color-dark;
   border-radius: @edu-border-radius-base;
   background-color: @edu-white;
 
