--- a/src/plugins/iframe/iframe.less
+++ b/src/plugins/iframe/iframe.less
@@ -6,7 +6,7 @@
     margin: 0 auto;
 
     &.Iframe-frame--borderVisible {
-      border: 1px solid @edu-border-color-base;
+      border: 1px solid @edu-border-color-dark;
     }
   }
 }
