--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -129,7 +129,7 @@
 // @ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
 
 // // Border color
-// @border-color-base: hsv(0, 0, 85%); // base border outline a component
+@border-color-base: @edu-border-color-base; // base border outline a component
 // @border-color-split: hsv(0, 0, 94%); // split border inside a component
 // @border-color-inverse: @white;
 // @border-width-base: 1px; // width of the border for a component
