--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -44,7 +44,8 @@
 @edu-background-color-base: #F0F0F0;
 @edu-background-color-light: #FAFAFA;
 @edu-content-title-color: #000000;
-@edu-border-color-base: #BCBCBC;
+@edu-border-color-dark: #BCBCBC;
+@edu-border-color-base: #D9D9D9;
 @edu-border-color-light: #E8E8E8;
 @edu-green-icon-color: @green-8;
 @edu-tooltip-text-color: @edu-white;
