--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -21,6 +21,10 @@
   gap: 5px;
   display: flex;
   align-items: center;
+
+  &.FilesListViewer-fileName--parentLink {
+    color: lighten(@edu-text-color, 25%);
+  }
 }
 
 .FilesListViewer-row {
