--- a/src/components/media-player.less
+++ b/src/components/media-player.less
@@ -1,6 +1,6 @@
 .MediaPlayer {
 
-  &.MediaPlayer--audioOnly {
+  &.MediaPlayer--noScreen {
     padding: 15px;
     border-radius: @edu-border-radius-base;
     background-color: @edu-background-color-light;
