--- a/src/components/media-player-track.less
+++ b/src/components/media-player-track.less
@@ -7,6 +7,10 @@
     overflow: hidden;
   }
 
+  &.MediaPlayerTrack--audioMode {
+    position: relative;
+  }
+
   &.MediaPlayerTrack--previewMode {
     width: 50%;
     margin: 0 auto;
@@ -21,4 +25,18 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.MediaPlayerTrack--audioModeOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  font-size: 100px;
+  background-color: @edu-white;
+  color: @edu-text-color-secondary;
 }
