--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -121,12 +121,44 @@
 
 .InteractiveMediaDisplay-overlay {
   position: absolute;
+  padding: 15px;
   top: -@interactive-media-display-overlay-overflow;
   left: -@interactive-media-display-overlay-overflow;
   width: calc(100% + 2 * @interactive-media-display-overlay-overflow);
   height: calc(100% + 2 * @interactive-media-display-overlay-overflow);
   background-color: @edu-background-color-light;
   display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  overflow: auto;
+}
+
+.InteractiveMediaDisplay-overlayTitle {
+  flex: 0 0 0%;
+  font-size: 12px;
+}
+
+.InteractiveMediaDisplay-overlayContent {
+  width: 70%;
+  padding: 30px;
+  margin: 0 auto;
+  flex: 1 1 auto;
+  display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+
+  @media @edu-media-phone {
+    width: 100%;
+  }
+}
+
+.InteractiveMediaDisplay-chapterAnswers {
+  margin: 30px 0;
+}
+
+.InteractiveMediaDisplay-overlayControls {
+  flex: 0 0 0%;
+  display: flex;
+  justify-content: flex-end;
 }
