EDU-588 Add mixin for ellipsing overflowing text

--- a/src/components/edit-control-panel.less
+++ b/src/components/edit-control-panel.less
@@ -1,10 +1,7 @@
-.EditControlPanel {
-}
+.EditControlPanel {}
 
 .EditControlPanel-leftSide {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  .m-overflow-ellipsis;
 }
 
 .EditControlPanel-leftSideButton {
