--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -53,10 +53,8 @@
 }
 
 .Timeline-segment {
+  .m-overflow-ellipsis;
   text-align: center;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
   border-right: 1px dotted @timeline-segments-bar-color;
 
   &.is-selected {
