--- a/src/plugins/anavis/anavis.less
+++ b/src/plugins/anavis/anavis.less
@@ -40,10 +40,8 @@
 }
 
 .AnavisDisplay-partName {
+  .m-overflow-ellipsis;
   text-align: center;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .AnavisDisplay-annotation {
@@ -62,9 +60,7 @@
 }
 
 .AnavisDisplay-annotationItemText {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+  .m-overflow-ellipsis;
 }
 
 .AnavisDisplay-players {
