--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -26,13 +26,11 @@
 }
 
 .InteractiveMediaEditor-selectedChapterTitle {
+  .m-overflow-ellipsis;
   width: 200px;
   padding: 0 5px;
   user-select: none;
   text-align: center;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 .InteractiveMediaEditor-chapterSelectorArrow {
