--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -8,11 +8,9 @@
 }
 
 .FilesGridViewer-fileContainer {
+  .m-overflow-ellipsis;
   padding: 5px;
   position: relative;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   width: 80px;
 }
 
