--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -161,3 +161,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.m-overflow-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
