--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -91,6 +91,8 @@
 @import '../components/mini-pager.less';
 @import '../components/file-preview.less';
 @import '../components/files-viewer.less';
+@import '../components/markdown-input.less';
+@import '../components/markdown-help.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
