EDU-588 Improve buttons texts

--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -119,7 +119,7 @@
 
 .InteractiveMediaDisplay-overlay {
   position: absolute;
-  padding: 15px;
+  padding: @edu-content-padding;
   top: -@interactive-media-display-overlay-overflow;
   left: -@interactive-media-display-overlay-overflow;
   width: calc(100% + 2 * @interactive-media-display-overlay-overflow);
