--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -132,12 +132,12 @@
 }
 
 
-.InteractiveMediaDisplay-overlayTitle {
+.InteractiveMediaDisplay-overlayChapterTitle {
   flex: none;
   font-size: 12px;
 }
 
-.InteractiveMediaDisplay-overlayContent {
+.InteractiveMediaDisplay-overlayChapterContent {
   width: 70%;
   padding: 30px;
   margin: 0 auto;
@@ -152,11 +152,11 @@
   }
 }
 
-.InteractiveMediaDisplay-answers {
+.InteractiveMediaDisplay-overlayChapterAnswers {
   margin: 30px 0;
 }
 
-.InteractiveMediaDisplay-answer {
+.InteractiveMediaDisplay-overlayChapterAnswer {
   display: flex;
   gap: 10px;
   align-items: center;
@@ -170,12 +170,12 @@
   color: @edu-success-color;
 }
 
-.InteractiveMediaDisplay-wrongAnswerMark {
+.InteractiveMediaDisplay-incorrectAnswerMark {
   color: @edu-error-color;
 }
 
 
-.InteractiveMediaDisplay-overlayControls {
+.InteractiveMediaDisplay-overlayChapterControls {
   flex: none;
   display: flex;
   gap: 10px;
@@ -183,7 +183,7 @@
 }
 
 .InteractiveMediaDisplay-chaptersResolution {
-  margin-top: 20px;
+  margin-top: 25px;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -199,10 +199,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-  &:hover {
-    cursor: pointer;
-  }
 }
 
 .InteractiveMediaDisplay-chapterResolution {
@@ -218,7 +214,36 @@
     background-image: linear-gradient(-45deg, lighten(@edu-success-color, 5%) 15%, transparent 100%);
   }
 
-  &.InteractiveMediaDisplay-chapterResolution--wrongAnswer {
+  &.InteractiveMediaDisplay-chapterResolution--incorrectAnswer {
     background-image: linear-gradient(-45deg, lighten(@edu-error-color, 15%) 15%, transparent 100%);
   }
+}
+
+.InteractiveMediaDisplay-overlayResults {
+  flex: 1 0 auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.InteractiveMediaDisplay-overlayResultsTitle {
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
+.InteractiveMediaDisplay-overlayResultsChapter {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.InteractiveMediaDisplay-overlayResultsChapterTitle {
+  .m-overflow-ellipsis;
+  width: 300px;
+}
+
+.InteractiveMediaDisplay-overlayResultsSummary {
+  margin-top: 30px;
 }
