EDU-591 Add functionality to storage-location component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -91,6 +91,7 @@
 @import '../components/mini-pager.less';
 @import '../components/file-preview.less';
 @import '../components/files-viewer.less';
+@import '../components/storage-location.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
