EDU-591 Fix list viewer vertical scrolling

--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -1,4 +1,6 @@
-.FilesListViewer {}
+.FilesListViewer {
+  height: 100%;
+}
 
 .FilesListViewer .ant-table .ant-table-thead > tr:nth-of-type(2) > th {
   border-right: 1px solid transparent;
