EDU-591 Fix long resource name case

--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -19,14 +19,18 @@
   }
 }
 
-.FilesListViewer-fileName {
-  gap: 5px;
+.FilesListViewer-fileNameCell {
   display: flex;
   align-items: center;
 
   &.FilesListViewer-fileName--parentLink {
     color: lighten(@edu-text-color, 25%);
   }
+}
+
+.FilesListViewer-fileName {
+  .m-overflow-ellipsis;
+  margin-left: 10px;
 }
 
 .FilesListViewer-row {
