EDU-591 Unify preview and delete buttons

--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -57,10 +57,12 @@
 }
 
 .FilesListViewer-action {
+  .m-box-shadow-round;
+  background-color: @edu-white;
   text-decoration: none;
   display: flex;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   align-items: center;
   justify-content: center;
 
