--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -167,3 +167,13 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.m-box-shadow {
+  border-radius: @edu-border-radius-base;
+  box-shadow: 0px 0px 8px @edu-border-color-base;
+}
+
+.m-box-shadow-round {
+  .m-box-shadow;
+  border-radius: 50%;
+}
