--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -12,6 +12,10 @@
   padding: 5px;
   position: relative;
   width: 80px;
+
+  &:hover {
+    .m-box-shadow;
+  }
 }
 
 .FilesGridViewer-file {
@@ -31,7 +35,6 @@
     &:hover,
     &:active {
       text-decoration: none;
-      color: lighten(@edu-text-color-secondary, 25%);
     }
   }
 }
@@ -80,20 +83,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: 10px;
   }
 }
 
 .FilesGridViewer-action {
-  width: 30px;
-  height: 30px;
+  .m-box-shadow-round;
+  background-color: @edu-white;
+  width: 25px;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
   opacity: 90%;
-  background-color: @edu-white;
-  border-radius: 50%;
 
   &:hover,
   &:active {
