EDU-605 Unify success and error colors

--- a/src/components/delete-button.less
+++ b/src/components/delete-button.less
@@ -1,8 +1,10 @@
 .DeleteButton {
   .m-icon-button;
-  color: @edu-danger-color;
+  color: @edu-error-color;
 
-  &:hover, &:active, &:visited {
-    color: @edu-danger-color;
+  &:hover,
+  &:active,
+  &:visited {
+    color: @edu-error-color;
   }
 }
