--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -104,20 +104,20 @@
   }
 
   &.FilesGridViewer-action--preview {
-    color: @edu-green-icon-color;
+    color: @edu-success-color;
 
     &:hover,
     &:active {
-      color: @edu-green-icon-color;
+      color: @edu-success-color;
     }
   }
 
   &.FilesGridViewer-action--delete {
-    color: @edu-danger-color;
+    color: @edu-error-color;
 
     &:hover,
     &:active {
-      color: @edu-danger-color;
+      color: @edu-error-color;
     }
   }
 }
