--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -72,20 +72,20 @@
   }
 
   &.FilesListViewer-action--preview {
-    color: @edu-green-icon-color;
+    color: @edu-success-color;
 
     &:hover,
     &:active {
-      color: @edu-green-icon-color;
+      color: @edu-success-color;
     }
   }
 
   &.FilesListViewer-action--delete {
-    color: @edu-danger-color;
+    color: @edu-error-color;
 
     &:hover,
     &:active {
-      color: @edu-danger-color;
+      color: @edu-error-color;
     }
   }
 }
