--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -15,7 +15,7 @@
 @success-color: @edu-success-color;
 @processing-color: @edu-processing-color;
 @error-color: @edu-error-color;
-@highlight-color: @edu-highlight-color;
+@highlight-color: @edu-error-color;
 @warning-color: @edu-warning-color;
 @normal-color: @edu-normal-color;
 @white: @edu-white;
