--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -47,17 +47,11 @@
 @edu-border-color-dark: #BCBCBC;
 @edu-border-color-base: #D9D9D9;
 @edu-border-color-light: #E8E8E8;
-@edu-green-icon-color: @green-8;
 @edu-tooltip-text-color: @edu-white;
 @edu-tooltip-background-color: rgba(62, 82, 118, 0.75);
-
-@edu-apply-color: @green-4;
-@edu-success-color: @green-7;
-@edu-discard-color: @red-4;
-@edu-error-color: @red-7;
-@edu-danger-color: @red-8;
-@edu-highlight-color: @red-5;
-@edu-warning-color: @orange-6;
+@edu-success-color: #57A773;
+@edu-error-color: #B02E0C;
+@edu-warning-color: #FA8C16;
 
 // Colors - antd mappings
 @edu-white: #FFFFFF;
