--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -171,6 +171,10 @@
 .m-box-shadow {
   border-radius: @edu-border-radius-base;
   box-shadow: 0px 0px 8px @edu-border-color-base;
+
+  &:hover {
+    box-shadow: 0px 0px 8px @edu-border-color-dark;
+  }
 }
 
 .m-box-shadow-round {
