EDU-596 Show either storage usage or warning under files viewer

--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -26,3 +26,8 @@
 .StorageLocation-filesViewerSelect {
   width: 100px;
 }
+
+.StorageLocation-storageInfo {
+  height: 40px;
+  margin-bottom: 20px;
+}
