EDU-596 Correct table background color setup

--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -589,7 +589,7 @@
 @table-header-bg: @edu-background-color-light;
 @table-header-sort-bg: @edu-background-color-light;
 @table-body-sort-bg: inherit;
-@table-row-hover-bg: @edu-table-row-hover-bg;
+@table-row-hover-bg: @edu-table-row-hover-background-color;
 // @table-selected-row-color: inherit;
 @table-selected-row-bg: @edu-table-selected-row-background-color;
 // @table-body-selected-sort-bg: @table-selected-row-bg;
