--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -66,8 +66,8 @@
 @edu-modal-heading-color: @edu-content-title-color;
 @edu-label-color: @edu-content-title-color;
 @edu-table-header-color: @edu-content-title-color;
-@edu-table-selected-row-bg: @edu-text-color;
-@edu-table-row-hover-bg: @background-color-light;
+@edu-table-row-hover-background-color: @background-color-light;
+@edu-table-selected-row-background-color: @edu-selection-background-color;
 @edu-table-footer-color: @edu-text-color;
 @edu-card-head-color: @edu-content-title-color;
 @edu-tabs-color: @edu-text-color-secondary;
@@ -78,7 +78,6 @@
 @edu-info-color: @edu-primary-color-light;
 @edu-processing-color: @edu-primary-color-light;
 @edu-selection-background-color: @edu-background-color-base;
-@edu-table-selected-row-background-color: @edu-selection-background-color;
 @edu-progress-default-color: fade(@edu-primary-color-light, 60%);
 // Colors - slider
 @edu-slider-rail-background-color: @edu-background-color-base;
