EDU-594 Render files viewer also on empty files list

--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -9,6 +9,10 @@
   height: 270px;
   margin: 20px 0;
   border: 1px solid @edu-border-color-base;
+
+  & .ant-table-placeholder .ant-table-cell {
+    border: none;
+  }
 }
 
 .StorageLocation-buttonsLine {
