EDU-595 Support file preview

--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -35,3 +35,20 @@
   min-height: 40px;
   margin-bottom: 20px;
 }
+
+.StorageLocation-wizardScreen {
+  display: flex;
+  flex-direction: column;
+  background-color: @edu-white;
+}
+
+.StorageLocation-wizardScreenBack {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.StorageLocation-wizardScreenSelect {
+  margin: 30px 0 0 auto;
+}
