--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -66,7 +66,8 @@
   background-color: @edu-selection-background-color;
 
   &.is-visible {
-    display: block
+    display: block;
+    user-select: none;
   }
 }
 
