EDU-607 Make the read-only mode clear

--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -160,6 +160,10 @@
   display: flex;
   gap: 10px;
   align-items: center;
+
+  &.is-disabled {
+    color: @edu-text-color-secondary;
+  }
 }
 
 .InteractiveMediaDisplay-answerMark {
