EDU-599 Use new markdown inputs everywhere there is markdown

--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -102,6 +102,12 @@
   right: 0;
 }
 
+.TableDesigner-contentCellMarkdownHelpContainer {
+  position: absolute;
+  bottom: 3px;
+  right: 3px;
+}
+
 .TableDesignerMenu {
   width: 14px;
   height: 14px;
