--- a/src/components/markdown-help.less
+++ b/src/components/markdown-help.less
@@ -1,28 +1,29 @@
 .MarkdownHelp {
+  font-size: 18px;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  cursor: pointer;
 
-  &.MarkdownHelp--inline {
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    font-size: 18px;
-    cursor: pointer;
+  &.is-disabled {
+    cursor: not-allowed;
+  }
 
-    &.is-disabled {
-      cursor: not-allowed;
-    }
+  &.MarkdownHelp--small {
+    font-size: 12px;
   }
 
   &.MarkdownHelp--block {
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    font-size: 18px;
     padding: 4px 12px;
     border-radius: 5px;
     background-color: @edu-secondary-color-light;
-    cursor: pointer;
     opacity: 0.25;
     transition: all 300ms ease;
+
+    &.MarkdownHelp--small {
+      padding: 2px 6px;
+      border-radius: 2px;
+    }
 
     &:hover, &:active, &:focus {
       opacity: 1;
@@ -30,8 +31,6 @@
     }
 
     &.is-disabled {
-      cursor: not-allowed;
-
       &:hover, &:active, &:focus {
         opacity: 0.25;
       }
