--- a/src/components/markdown-help.less
+++ b/src/components/markdown-help.less
@@ -1,3 +1,5 @@
+@markdown-help-block-help-inactive-opacity: 0.25;
+
 .MarkdownHelp {
   font-size: 18px;
   display: grid;
@@ -17,7 +19,7 @@
     padding: 4px 12px;
     border-radius: 5px;
     background-color: @edu-secondary-color-light;
-    opacity: 0.25;
+    opacity: @markdown-help-block-help-inactive-opacity;
     transition: all 300ms ease;
 
     &.MarkdownHelp--small {
@@ -32,13 +34,11 @@
 
     &.is-disabled {
       &:hover, &:active, &:focus {
-        opacity: 0.25;
+        opacity: @markdown-help-block-help-inactive-opacity;
       }
     }
   }
 }
-
-.MarkdownHelp-blockHelpContent {}
 
 .MarkdownHelp-blockHelpTable {
   width: 100%;
