EDU-599 Make the markdown input space greedy

--- a/src/components/markdown-input.less
+++ b/src/components/markdown-input.less
@@ -1,6 +1,7 @@
 @markdown-input-block-min-height: 100px;
 
 .MarkdownInput {
+  width: 100%;
   display: grid;
   gap: 5px;
   grid-template-columns: 1fr;
