EDU-609 Invert buttons in edit control panel

--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -60,6 +60,8 @@
 }
 
 .ControlPanel-openButton {
+  border-radius: 0;
+
   .m-no-spinner-background;
   height: @control-panel-height;
   width: @control-panel-height;
