--- a/src/components/edit-control-panel.less
+++ b/src/components/edit-control-panel.less
@@ -15,8 +15,7 @@
   align-items: center;
   grid-auto-flow: column;
   gap: 1.5 * @edu-button-spacing;
-  padding-right: 1.5 * @edu-button-spacing;
-  padding-left: @edu-content-padding;
+  padding-left: 1.5 * @edu-button-spacing;
 }
 
 .EditControlPanel-rightSideButton {
