EDU-621 Storage browser final touchups

--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -19,6 +19,8 @@
 }
 
 .FilesGridViewer-file {
+  .m-overflow-ellipsis;
+  display: block;
   text-align: center;
   text-decoration: none;
   color: @edu-text-color;
