--- a/src/plugins/anavis/anavis.less
+++ b/src/plugins/anavis/anavis.less
@@ -76,16 +76,8 @@
 }
 
 .AnavisEditor-table {
-  .ant-table {
-    border-width: 2px;
-    border-style: dashed;
-  }
-
-  &.u-can-drop {
-    .ant-table {
-      border-color: @edu-primary-color-light;
-    }
-  }
+  border-radius: @edu-border-radius-base;
+  border: 1px solid @edu-border-color-base;
 }
 
 .AnavisEditor-annotation {
