--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -181,3 +181,13 @@
   .m-box-shadow;
   border-radius: 50%;
 }
+
+.m-border-glow-success {
+  border-color: @edu-success-color;
+  box-shadow: 0px 0px 8px @edu-success-color;
+}
+
+.m-border-glow-error {
+  border-color: @edu-error-color;
+  box-shadow: 0px 0px 8px @edu-error-color;
+}
