--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -44,3 +44,11 @@
   grid-template-columns: 1fr auto;
   gap: @edu-button-spacing;
 }
+
+.u-can-drop {
+  .m-border-glow-success;
+}
+
+.u-cannot-drop {
+  .m-border-glow-error;
+}
