--- a/src/components/files-viewer.less
+++ b/src/components/files-viewer.less
@@ -15,4 +15,8 @@
   align-content: center;
   justify-content: center;
   background-color: fade(@edu-background-color-light, 60%);
+
+  &.is-disabled {
+    display: none;
+  }
 }
