EDU-611 Replace old storage file picker modal with new resource picker

--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -26,8 +26,12 @@
   gap: 10px;
 }
 
-.StorageLocation-filesViewerSelect {
+.StorageLocation-filesViewerSelectCotainer {
   width: 100px;
+}
+
+.StorageLocation-filesViewerSelect {
+  width: 100%;
 }
 
 .StorageLocation-storageInfo {
