--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -1,3 +1,5 @@
+@files-grid-viewer-action-size: 22px;
+
 .FilesGridViewer {
   display: flex;
   gap: 20px;
@@ -8,10 +10,9 @@
 }
 
 .FilesGridViewer-fileContainer {
-  .m-overflow-ellipsis;
+  width: 80px;
   padding: 5px;
   position: relative;
-  width: 80px;
 
   &:hover {
     .m-box-shadow;
@@ -81,24 +82,22 @@
   cursor: pointer;
   display: none;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -(@files-grid-viewer-action-size / 2);
+  right: -(@files-grid-viewer-action-size / 2);
 
   &.are-visible {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 5px;
   }
 }
 
 .FilesGridViewer-action {
-  .m-box-shadow-round;
+  .m-box-shadow;
   background-color: @edu-white;
-  width: 25px;
-  height: 25px;
+  width: @files-grid-viewer-action-size;
+  height: @files-grid-viewer-action-size;
   display: flex;
   align-items: center;
   justify-content: center;
