--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -35,6 +35,7 @@
 
 .FilesListViewer-row {
   cursor: pointer;
+  user-select: none;
 
   &.is-selected {
     background-color: @edu-table-selected-row-background-color;
@@ -52,17 +53,17 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 10px;
+    gap: 5px;
   }
 }
 
 .FilesListViewer-action {
-  .m-box-shadow-round;
+  .m-box-shadow;
   background-color: @edu-white;
   text-decoration: none;
   display: flex;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   align-items: center;
   justify-content: center;
 
