EDU-623 Increase modal height and extract controls gap variable

--- a/src/components/edit-control-panel.less
+++ b/src/components/edit-control-panel.less
@@ -14,8 +14,8 @@
   display: grid;
   align-items: center;
   grid-auto-flow: column;
-  gap: 1.5 * @edu-button-spacing;
-  padding-left: 1.5 * @edu-button-spacing;
+  gap: @edu-controls-group-gap;
+  padding-left: @edu-controls-group-gap;
 }
 
 .EditControlPanel-rightSideButton {
