--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -23,6 +23,7 @@
 
 // Layout
 @edu-page-content-padding: 30px;
+@edu-controls-group-gap: 10px;
 @edu-content-padding: 15px;
 @edu-min-page-width: 200px;
 @edu-content-width-wide: 1200px;
