--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -158,7 +158,7 @@
 
 .InteractiveMediaDisplay-overlayChapterAnswer {
   display: flex;
-  gap: 10px;
+  gap: @edu-controls-group-gap;
   align-items: center;
 
   &.is-disabled {
@@ -182,7 +182,7 @@
 .InteractiveMediaDisplay-overlayChapterControls {
   flex: none;
   display: flex;
-  gap: 10px;
+  gap: @edu-controls-group-gap;
   justify-content: flex-end;
 }
 
@@ -236,7 +236,7 @@
 
 .InteractiveMediaDisplay-overlayResultsChapter {
   display: flex;
-  gap: 10px;
+  gap: @edu-controls-group-gap;
   align-items: center;
   justify-content: center;
 }
