--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -1,12 +1,11 @@
 @table-plugin-cell-content-padding: 5px;
 
 .TableDisplay {
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 .TableDisplay-table {
   margin: 0 auto;
-  overflow-x: hidden;
   border-collapse: collapse;
 }
 
