--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -2,7 +2,7 @@
 
 .EarTraining-soundPlayer {
   .m-horizontally-centered;
-  width: 50%;
+  max-width: @edu-breakpoint-sm;
 }
 
 .EarTraining-testWrapper {
